--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -45,4 +45,8 @@
     <string name="misc_category_title">Miscellaneous</string>
     <string name="misc_category_summary">Other options</string>
 
+    <!-- Show searchbar -->
+    <string name="show_searchbar_title">Show search bar</string>
+    <string name="show_searchbar_summary">Show the search bar on the home screen</string>
+
 </resources>
