--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -60,4 +60,10 @@
     <string name="label_search">Search</string>
     <string name="label_voice_search">Voice search</string>
 
+    <!-- Gradients on Workspace/Hotseat -->
+    <string name="workspace_gradient_title">Show gradient on top</string>
+    <string name="workspace_gradient_summary">Enable a subtle gradient from the status bar</string>
+    <string name="hotseat_gradient_title">Show gradient on bottom</string>
+    <string name="hotseat_gradient_summary">Enable a subtle gradient from the launcher dock</string>
+
 </resources>
