--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -19,6 +19,16 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- About info -->
+    <string name="about_pdx_title" translatable="false">@string/app_name</string>
+    <string name="about_pdx_summary">by PixelDust ROM</string>
+    <string name="about_based_on_title">Based on AOSP Launcher3</string>
+    <string name="about_based_on_summary">by the Android Open Source Project</string>
+    <string name="about_thanks_cat">Special thanks</string>
+    <string name="about">About</string>
+    <string name="about_summary">Info about the launcher</string>
+    <string name="about_app_version">Version</string>
+
     <!-- General -->
     <string name="settings_title">Settings</string>
 
