PixeldustLauncher: Add support for Google QuickSearchBox
Moves QSB to the hotseat and adds support for basic Google search functionality. This iteration does not support extended features (ex. Google Doodle) but has plans to support these features later on

Change-Id: Ia905b475e133c82814745e0cd037d07f7b41d1a9
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values/pixeldust_attrs.xml
+++ b/res/values/pixeldust_attrs.xml
@@ -13,12 +13,10 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
-
-    <string name="pref_show_google_now_summary" translatable="false">@string/msg_minus_one_on_left</string>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- QSB -->
-    <item type="id" name="g_icon" />
-    <item type="id" name="mic_icon" />
+    <attr name="gIcon" format="reference" />
+    <attr name="micIcon" format="reference" />
 
 </resources>
