--- a/res/color/qsb_icon_tint.xml
+++ b/res/color/qsb_icon_tint.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2019 The PixelDust Project
+<!-- Copyright (C) 2018 CypherOS
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
 
-        http://www.apache.org/licenses/LICENSE-2.0
+          http://www.apache.org/licenses/LICENSE-2.0
 
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
@@ -13,12 +13,6 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
-
-    <string name="pref_show_google_now_summary" translatable="false">@string/msg_minus_one_on_left</string>
-
-    <!-- QSB -->
-    <item type="id" name="g_icon" />
-    <item type="id" name="mic_icon" />
-
-</resources>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:color="#64ffffff" android:state_pressed="true" />
+</selector>
