--- a/res/values/pixeldust_colors.xml
+++ b/res/values/pixeldust_colors.xml
@@ -15,10 +15,9 @@
 -->
 <resources>
 
-    <string name="pref_show_google_now_summary" translatable="false">@string/msg_minus_one_on_left</string>
-
     <!-- QSB -->
-    <item type="id" name="g_icon" />
-    <item type="id" name="mic_icon" />
+    <color name="qsb_drawer_text_color_normal">#ff212121</color>
+    <color name="qsb_background_default">#ccffffff</color>
+    <color name="qsb_background_default_dark">#99fafafa</color>
 
 </resources>
