--- a/res/values/pixeldust_dimens.xml
+++ b/res/values/pixeldust_dimens.xml
@@ -15,10 +15,13 @@
 -->
 <resources>
 
-    <string name="pref_show_google_now_summary" translatable="false">@string/msg_minus_one_on_left</string>
-
     <!-- QSB -->
-    <item type="id" name="g_icon" />
-    <item type="id" name="mic_icon" />
+    <dimen name="hotseat_qsb_bottom_margin">2dp</dimen>
+    <dimen name="hotseat_qsb_scroll_key_shadow_offset">2dp</dimen>
+    <dimen name="hotseat_qsb_scroll_shadow_blur_radius">1.5dp</dimen>
+    <dimen name="qsb_margin_top_adjusting">20dp</dimen>
+    <dimen name="qsb_mic_width">48dp</dimen>
+    <dimen name="qsb_shadow_margin">6dp</dimen>
+    <dimen name="qsb_widget_height">56dp</dimen>
 
 </resources>
