--- a/res/layout/work_tab_bottom_user_education_view.xml
+++ b/res/layout/work_tab_bottom_user_education_view.xml
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
-        android:fontFamily="roboto-medium"
+        android:fontFamily="@*android:string/config_headlineFontFamilyMedium"
         android:text="@string/bottom_work_tab_user_education_title"
         android:textColor="@android:color/white"
         android:textSize="20sp"/>
