--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -39,7 +39,7 @@
     <string name="home_category_title">Home screen</string>
     <string name="home_category_summary">Set Google now panel and more</string>
     <string name="icons_category_title">Icons</string>
-    <string name="icons_category_summary">Set icon shape and more</string>
+    <string name="icons_category_summary">Set icon options and more</string>
     <string name="app_drawer_category_title">App drawer</string>
     <string name="app_drawer_category_summary">Customize your app drawer</string>
     <string name="misc_category_title">Miscellaneous</string>
